--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,23 @@
-body {
-  /*width: 100%;*/
-  /*height: 100%;*/
-  /*margin: 0;*/
-  /*overflow: hidden;*/
-  background-color: #333;
-}
-/*canvas {
+canvas {
   display: block;
-  cursor: none;
-}*/
-#beer-run {
-  border: 2px solid white;
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  cursor: pointer;
+  margin: 0 auto;
+  width: 85%;
+  height: 70%;
+}
+
+body {
+  background-color: #2b2b2b;
+  font-family: 'helvetica', sans-serif;
+  color: white;
+}
+
+h1 {
+  color: white;
+  margin: block;
+  margin-left: 11%;
+}
+
+img {
+  margin-left: 10%;
+  display: block;
 }
