--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,14 @@
 canvas {
   display: block;
   margin: 0 auto;
-  width: 85%;
-  height: 70%;
+}
+
+@media (max-width: 1200px) {
+  canvas {
+    margin: 0 auto;
+    width: 100vw !important;
+    height: 100vh !important;
+  }
 }
 
 body {
@@ -21,3 +27,4 @@ img {
   margin-left: 10%;
   display: block;
 }
+
